js262/test/language/line-terminators/invalid-comment-single-lf.js


/*---
info: Single line comments can not contain LINE FEED (U+000A) inside
es5id: 7.3_A3.1_T3
description: Insert real LINE FEED into single line comment
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();


line comment
